<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@mipmap/icon"/>
            <TextView
                android:textSize="20sp"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>
            <TextView
                android:layout_gravity="center"
                android:paddingBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"/>
            <TextView
                android:background="@drawable/roundcorner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/about_app"/>
            <TextView
                android:background="@drawable/roundcorner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/thanks_to_opensource"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>