<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/smice_icon"/>
            <TextView
                android:textSize="20sp"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"/>

            <TextView
                android:id="@+id/feedback_content"
                android:background="@drawable/roundcorner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/feedback"/>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/roundcorner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/donate"/>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:id="@+id/img_alipay"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="30dp"
                        android:src="@drawable/alipay"/>
                    <ImageView
                        android:id="@+id/img_weixinpay"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="30dp"
                        android:src="@drawable/wechat"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>